--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
+    "p-limit": "^6.2.0",
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
