--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^5.1.0",
     "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
+    "openai": "^4.100.0",
     "p-limit": "^6.2.0",
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
