Agent base completed

--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,18 @@
 {
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/core": "^0.3.56",
+    "@langchain/langgraph": "^0.2.72",
+    "@langchain/openai": "^0.5.10",
     "anthropic": "^0.0.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "langchain": "^0.3.26",
+    "langsmith": "^0.3.29",
     "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.100.0",
