--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
-    "@langchain/anthropic": "^0.3.21",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/community": "^0.0.34",
     "@langchain/core": "^0.3.56",
-    "@langchain/groq": "^0.2.2",
     "@langchain/langgraph": "^0.2.72",
     "@langchain/openai": "^0.5.10",
     "anthropic": "^0.0.0",
@@ -12,9 +12,10 @@
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "diff-match-patch": "^1.0.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "langchain": "^0.3.27",
+    "langchain": "^0.3.26",
     "langsmith": "^0.3.29",
     "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
@@ -23,4 +24,13 @@
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-  }
+    "zod": "^3.25.7",
+    "zod-to-json-schema": "^3.24.5"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "npm install"
+  },
+  "type": "module"
+}
