Created api for screenshot to website

--- a/server/sample.env
+++ b/server/sample.env
@@ -14,7 +14,10 @@ WEBSITE_DIR=scraped_website
 CONCURRENCY_LIMIT=10
 PUPPETEER_ARGS=--no-sandbox,--disable-setuid-sandbox
 
-
-# LLM
+# LLM API Keys
 ANTHROPIC_API_KEY=XXXXX
 OPENAI_API_KEY=XXXXXX
+
+# Vercel v0 API - Get key from https://v0.dev/dashboard
+# Required for screenshot-to-code feature
+V0_API_KEY=XXXXXX
