--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "langchain": "^0.3.26",
     "langsmith": "^0.3.29",
     "mime-types": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.100.0",
     "p-limit": "^6.2.0",
