--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "lucide-react": "^0.510.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
