--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "zod": "^3.25.7",
     "zod-to-json-schema": "^3.24.5"
   },
