--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.14.0",
     "lucide-react": "^0.510.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
